Fix: correct Spring Boot port binding for Render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=bfhl
-# Render will assign a random port in cloud, so bind to PORT env var
+
+# Render assigns a dynamic port, fallback to 8080 locally
 server.port=${PORT:8080}
+
+# Important: Bind to all network interfaces, not just localhost
+server.address=0.0.0.0
